--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <script id="home-tpl" type="text/x-handlebars-template">
-    <div class='header'><h1>Home</h1></div>
+    <div class='header'><h1>Elenco Contatti</h1></div>
     <div class='search-bar'><input class='search-key' type="search"/></div>
     <div class="scroll"><ul class='employee-list'></ul></div>
 </script>
@@ -18,7 +18,7 @@
 </script>
 
 <script id="employee-tpl" type="text/x-handlebars-template">
-    <div class='header'><a href='#' class="button header-button header-button-left">Back</a><h1>Details</h1></div>
+    <div class='header'><a href='#' class="button header-button header-button-left">Indietro</a><h1>Dettaglio</h1></div>
     <div class='details'>
     <img id='image' src='img/{{firstName}}_{{lastName}}.jpg' style="float:left;margin:10px;"/>
     <h1>{{firstName}} {{lastName}}</h1>
